--- a/data/blog/697. 数组的度.md
+++ b/data/blog/697. 数组的度.md
@@ -3,10 +3,7 @@ title: 697. 数组的度
 date: '2022-05-13'
 tags: ['算法']
 draft: false
-summary: 给定一个非空且只包含非负数的整数数组 nums，数组的 度 的定义是指数组里任一元素出现频数的最大值。
-
-你的任务是在 nums 中找到与 nums 拥有相同大小的度的最短连续子数组，返回其长度。
-
+summary: 给定一个非空且只包含非负数的整数数组 nums，数组的 度 的定义是指数组里任一元素出现频数的最大值。你的任务是在 nums 中找到与 nums 拥有相同大小的度的最短连续子数组，返回其长度。
 ---
 
 # [697. 数组的度](https://leetcode.cn/problems/degree-of-an-array/)
