--- a/data/blog/697.md
+++ b/data/blog/697.md
@@ -8,9 +8,9 @@ summary: 每日算法记录
 
 # [697. 数组的度](https://leetcode.cn/problems/degree-of-an-array/)
 
-> 给定一个非空且只包含非负数的整数数组  nums，数组的 度 的定义是指数组里任一元素出现频数的最大值。你的任务是在 nums 中找到与  nums  拥有相同大小的度的最短连续子数组，返回其长度。
+给定一个非空且只包含非负数的整数数组  nums，数组的 度 的定义是指数组里任一元素出现频数的最大值。你的任务是在 nums 中找到与  nums  拥有相同大小的度的最短连续子数组，返回其长度。
 
-示例 1：
+**示例 1：**
 
 ```ts
   输入：nums = [1,2,2,3,1]
@@ -26,7 +26,7 @@ summary: 每日算法记录
   最短连续子数组 [2, 2] 的长度为 2 ，所以返回 2 。
 ```
 
-示例 2:
+**示例 2:**
 
 ```ts
 输入：nums = [1,2,2,3,1,4,2]
