--- a/data/blog/ts01.md
+++ b/data/blog/ts01.md
@@ -120,6 +120,54 @@ const isNumber = (value: unkown): value is number => {
 }
 ```
 
+### infer 关键字
+
+```ts
+type Func = (...args: any[]) => any
+
+// 判断T的 返回类型是否为 string
+type FunctionConditionType<T extends Func> = T extends (...args: any[]) => string
+  ? 'A string return func!'
+  : 'A non-string return func!'
+
+//  "A string return func!"
+type StringResult = FunctionConditionType<() => string>
+// 'A non-string return func!';
+type NonStringResult1 = FunctionConditionType<() => boolean>
+// 'A non-string return func!';
+type NonStringResult2 = FunctionConditionType<() => number>
+```
+
+条件类型用于判断两个函数类型是否具有兼容性，而条件中并不限制参数类型，仅比较二者的返回值类型。
+
+infer 关键字来在条件类型中提取类型的某一部分信息，比如上面我们要提取函数返回值类型的话，可以这么放：
+
+```ts
+type FunctionReturnType<T extends Func> = T extends (...args: any[]) => infer R ? R : never
+```
+
+当传入的类型参数满足 `T extends (...args: any[] ) => infer R` 这样一个结构（不用管 `infer R`，当它是 any 就行），返回 `infer R` 位置的值，即 `R`。否则，返回 `never`.
+
+> 实际应用
+
+```ts
+type Swap<T extends any[]> = T extends [infer A, infer B] ? [B, A] : T
+
+// 符合结构 => [2, 1]
+type SwapTest1 = Swap<[1, 2]>
+
+// 不符合结构 返回原类型 => [1, 2, 3]
+type SwapTest2 = Swap<[1, 2, 3]>
+```
+
+由于声明的结构是长度 2 的元组，很难在实际开中应用，我们可以用 rest 操作符来处理任意长度
+
+```ts
+type Swap<T extends any[]> = T extends [infer Start, ...infer Ather, infer End]
+  ? [End, ...Ather, Start]
+  : T
+```
+
 ## 索引类型访问
 
 ```ts
